# firezone

./: .codespellrc  .credo.exs  .dockerignore  .env.sample  .envrc  .formatter.exs  .gcloudignore  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .markdownlintignore  .oidc_env.sample.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .rubocop.yml  .rules  .terraformignore  .tool-versions  2  404.html  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.build  Dockerfile.dev  Dockerfile.prod  Gemfile  LICENSE  MAINTAINERS.md  Makefile  NOTICE.txt  README.md  SECURITY.md  TUN_BATCHING_IMPLEMENTATION_PLAN.md  Vagrantfile  (+42 more)
e2e-tests/e2e-orchestrator/: Cargo.toml
e2e-tests/e2e-orchestrator/src/: client.rs  config.rs  main.rs  node.rs  test_setup.rs
rust/: .dockerignore  .gitignore  .tool-versions  AGENT.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile-rpm  Dockerfile.dev  Dockerfile.xdp-tools  README.md  clippy.toml  deny.toml  docker-compose-dev.yml  docker-init-client.sh  docker-init-gateway.sh  docker-init-http-test-server.sh  docker-init-relay.sh  docker-init.sh  mise.toml  relay.Dockerfile  rust-toolchain.toml
rust/.cargo/: config.toml  mutants.toml
rust/android-client-ffi/: Cargo.toml
rust/android-client-ffi/src/: lib.rs
rust/anyhow-ext/: Cargo.toml  lib.rs
rust/apple-client-ffi/: .gitignore  Cargo.toml  README.md  build-rust.sh  build.rs
rust/apple-client-ffi/src/: lib.rs  make_writer.rs  tun.rs
rust/bin-shared/: Cargo.toml
rust/bin-shared/benches/: divan.rs  tunnel.rs
rust/bin-shared/src/: clear_logs.rs  device_id.rs  dns_control.rs  known_dirs.rs  lib.rs  linux.rs  macos.rs  network_changes.rs  tun_device_manager.rs  windows.rs  worker_thread.rs
rust/bin-shared/tests/: dns_control_windows.rs  network_notifiers.rs  no_packet_loops_tcp.rs  no_packet_loops_udp.rs  tunnel.rs  tunnel_drop.rs
rust/boringtun/: Cargo.toml  LICENSE.md  README.md
rust/boringtun/src/: jni.rs  lib.rs  serialization.rs  wireguard_ffi.h
rust/bufferpool/: Cargo.toml  lib.rs
rust/circuit-breaker/src/: lib.rs
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
rust/client-ffi/: Cargo.toml  uniffi.toml
rust/client-ffi/.cargo/: config.toml
rust/client-ffi/docs/: apple_batched_io.md
rust/client-ffi/src/: fd.rs  lib.rs  platform.rs
rust/client-shared/: Cargo.toml
rust/client-shared/src/: callbacks.rs  dns_resource_record_cache.rs  eventloop.rs  lib.rs  serde_dns_resource_records.rs  serde_routelist.rs
rust/client-tunnel/: Cargo.toml  README.md
rust/client-tunnel/src/: lib.rs  linux.rs
rust/connection-tests/: Cargo.toml  README.md  docker-compose.lan.yml  docker-compose.wan-hp.yml  docker-compose.wan-relay.yml  docker-compose.wan.yml
rust/connection-tests/router/: Dockerfile  README.md  run.sh
rust/connection-tests/src/: main.rs
rust/connlib/: .gitignore  README.md
rust/connlib/bufferpool/: Cargo.toml  lib.rs
rust/connlib/connection/: Cargo.toml
rust/connlib/core-affinity/: Cargo.toml  lib.rs
rust/connlib/dns-over-tcp/: Cargo.toml
rust/connlib/dns-types/: Cargo.toml  lib.rs
rust/connlib/etherparse-ext/: Cargo.toml
rust/connlib/gateway/: Cargo.toml
rust/connlib/gateway-shared/: Cargo.toml
rust/connlib/headless-utils/: Cargo.toml
rust/connlib/http-client/: Cargo.toml  lib.rs
rust/connlib/ip-packet/: Cargo.toml
rust/connlib/l3-tcp/: Cargo.toml
rust/connlib/l3-udp-dns-client/: lib.rs
rust/connlib/l4-tcp-dns-server/: Cargo.toml  lib.rs
rust/connlib/l4-udp-dns-client/: Cargo.toml  lib.rs
rust/connlib/l4-udp-dns-server/: Cargo.toml  lib.rs
rust/connlib/macros/: Cargo.toml
rust/connlib/model/: Cargo.toml
rust/connlib/phoenix-channel/: Cargo.toml
rust/connlib/shared/: Cargo.toml
rust/connlib/snownet/: Cargo.toml  README.md
rust/connlib/socket-factory/: Cargo.toml
rust/connlib/tun/: Cargo.toml
rust/connlib/tunnel/: .gitignore  Cargo.toml
rust/dns-over-tcp/: Cargo.toml
rust/dns-over-tcp/src/: adapter.rs  client.rs  codec.rs  interface.rs  lib.rs  server.rs  stub_device.rs  time.rs
rust/dns-over-tcp/tests/: client_and_server.rs  smoke.rs  smoke_server.rs
rust/dns-types/: Cargo.toml  lib.rs
rust/docker-browser-tests/: tsconfig.json
rust/docker-browser-tests/src/: load.ts  refresh.ts  shared.ts
rust/etherparse-ext/src/: lib.rs  (+3 more)
rust/firezone-cli-utils/: Cargo.toml
rust/gateway/: Cargo.toml  README.md
rust/gtk-client/: Cargo.toml  README.md  build.sh
rust/gui-client/: .dockerignore  .gitignore  README.md  build-debug.bat  build.bat  build.sh  dev.bat  dev.sh  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
rust/gui-client-2/: build.bat  build.sh  package.json  pnpm-lock.yaml
rust/gui-client-common/: Cargo.toml
rust/gui-smoke-test/: Cargo.toml
rust/headless-client/: Cargo.toml  README.md
rust/headless-utils/: Cargo.toml
rust/hello-world/: Cargo.toml
rust/http-health-check/: Cargo.toml
rust/http-test-server/: Cargo.toml  README.MD
rust/iced-client/: Cargo.toml
rust/ip-packet/: Cargo.toml
rust/known-dirs/: Cargo.toml
rust/linux-client/: Cargo.toml  README.md
rust/linux-tunnel/: Cargo.toml  README.md
rust/logging/: Cargo.toml
rust/mise-tasks/: patch-relay-release
rust/phoenix-channel/: Cargo.toml
rust/relay/: Cargo.toml  README.md  fz-relay.service  run_smoke_test.sh
rust/snownet-tests/: Cargo.toml  docker-compose.lan.yml  docker-compose.wan-hp.yml  docker-compose.wan-relay.yml
rust/socket-factory/: Cargo.toml
rust/tauri-client/: README.md  build-debug.bat  build.sh  tailwind.config.js  tsconfig.json
rust/telemetry/: Cargo.toml
rust/tracing-on-demand-rolling-appender/: Cargo.toml
rust/tracking-allocator/: Cargo.toml
rust/tun/: Cargo.toml
rust/windows-client/: .gitignore  Cargo.toml  README.md  build.bat  build.rs  build.sh  ci_check.bash  dev.bat  dev.sh  firezone-windows-client.exe.manifest  firezone-windows-client.rc  package.json  pnpm-lock.yaml  tailwind.config.js  tauri.conf.json  tsconfig.json
rust/winreg-listener/: Cargo.toml
(+12381 files in other folders)
