[package]
name = "apple-client-ffi"
# mark:next-apple-version
version = "1.5.8"
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "connlib"
crate-type = ["staticlib"]
doc = false

[dependencies]
anyhow = { workspace = true }
backoff = { workspace = true }
client-shared = { workspace = true }
connlib-model = { workspace = true }
dns-types = { workspace = true }
firezone-logging = { workspace = true }
firezone-telemetry = { workspace = true }
futures = { workspace = true }
ip-packet = { workspace = true }
ip_network = { workspace = true }
libc = { workspace = true }
phoenix-channel = { workspace = true }
rustls = { workspace = true }
secrecy = { workspace = true }
serde_json = { workspace = true }
socket-factory = { workspace = true }
swift-bridge = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
tun = { workspace = true }
url = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
oslog = { version = "0.2.0", default-features = false }

[build-dependencies]
swift-bridge-build = { workspace = true }

[lints]
workspace = true
