[package]
name = "firezone-bin-shared"
version = "0.1.0"
edition = "2021"
description = "Firezone-specific modules shared between binaries."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
connlib-shared = { workspace = true }
futures = "0.3"
ip-packet = { workspace = true }
ip_network = { version = "0.4", default-features = false, features = ["serde"] }
tokio = { workspace = true, features = ["rt", "sync"] }
tracing = { workspace = true }
tracing-log = "0.2"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tun = { workspace = true }
url = { version = "2.5.2", default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
netlink-packet-core = { version = "0.7", default-features = false }
netlink-packet-route = { version = "0.19", default-features = false }
nix = { version = "0.28.0", features = ["socket"] }
rtnetlink = { workspace = true }
socket-factory = { workspace = true }
zbus = "4.4" # Can't use `zbus`'s `tokio` feature here, or it will break toast popups all the way over in `gui-client`.

[target.'cfg(windows)'.dependencies]
known-folders = "1.1.0"
ring = "0.17"
uuid = { version = "1.10.0", features = ["v4"] }
windows-core = "0.58.0"
windows-implement = "0.58.0"
wintun = "0.4.0"
winreg = "0.52.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = [
  # For implementing COM interfaces
  "implement",
  "Win32_Foundation",
  # For listening for network change events
  "Win32_Networking_NetworkListManager",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_Networking_WinSock",
  "Win32_Security",
  # COM is needed to listen for network change events
  "Win32_System_Com",
  # Needed to listen for system DNS changes
  "Win32_System_Registry",
  "Win32_System_Threading",
]

[lints]
workspace = true

[[bench]]
name = "tunnel"
harness = false
