[package]
name = "boringtun"
description = "an implementation of the WireGuard® protocol designed for portability and speed"
version = "0.6.0"
authors = [
    "Noah Kennedy <nkennedy@cloudflare.com>",
    "Andy Grover <agrover@cloudflare.com>",
    "Jeff Hiner <jhiner@cloudflare.com>",
]
license = "BSD-3-Clause"
repository = "https://github.com/firezone/firezone"
edition = "2018"

[dependencies]
aead = "0.5.0-pre.2"
blake2 = "0.10"
chacha20poly1305 = "0.10.0-pre.1"
hmac = "0.12"
libc = "0.2"
parking_lot = "0.12"
rand_core = { version = "0.6.4", features = ["getrandom"] }
ring = "0.17"
tracing = "0.1.40"
untrusted = "0.9.0"
x25519-dalek = { version = "2.0.0", features = [
    "reusable_secrets",
    "static_secrets",
] }

[dev-dependencies]
etherparse = "0.15"
