[package]
name = "firezone-cli"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
description = "CLI for managing Firezone installations"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
rpassword = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true, features = ["user"] }

[lints]
workspace = true
